--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -272,29 +272,31 @@
 
 5. On the **Proxy Configuration** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Next**.
 
-6. On the **Installation** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Install**.
+6. On the **Microsoft Update Opt-In** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, select **Use Microsoft Update when I check for updates (recommended)**, and click **Next**.
 
-7. Click **Proceed to Registration**. This will start **Register Server Wizard**.
+7. On the **Installation** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Install**.
 
-8. Switch to Microsoft Edge displaying the Azure portal and, on the **Prepare infrastructure** blade, click **Download**.
+8. Click **Proceed to Registration**. This will start **Register Server Wizard**.
 
-9. When prompted, click **Save**. This will save the vault credentials file to your Downloads folder.
+9. Switch to Microsoft Edge displaying the Azure portal and, on the **Prepare infrastructure** blade, click **Download**.
 
-10. Switch back to the **Register Server Wizard** and, on the **Vault Identification** page, click **Browse**.
+10. When prompted, click **Save**. This will save the vault credentials file to your Downloads folder.
 
-11. In the **Select Vault Credentials** dialog box, browse to the **Downloads** folder, click the **.VaultCredentials** file you downloaded, and click **Open**.
+11. Switch back to the **Register Server Wizard** and, on the **Vault Identification** page, click **Browse**.
 
-12. Click **Next**.
+12. In the **Select Vault Credentials** dialog box, browse to the **Downloads** folder, click the **.VaultCredentials** file you downloaded, and click **Open**.
 
-13. On the **Encryption Setting** page of the **Register Server Wizard**, click **Generate Passphrase**.
+13. Click **Next**.
 
-14. On the **Encryption Setting** page of the **Register Server Wizard**, next to the **Enter a location to save the passphrase**, click **Browse**.
+14. On the **Encryption Setting** page of the **Register Server Wizard**, click **Generate Passphrase**.
 
-15. In the **Browse For Folder** dialog box, navigate to E:\\Labfiles\\Lab06\\Starter\\ and click **OK**.
+15. On the **Encryption Setting** page of the **Register Server Wizard**, next to the **Enter a location to save the passphrase**, click **Browse**.
 
-16. Click **Finish** and wait for the registration to complete.
+16. In the **Browse For Folder** dialog box, navigate to E:\\Labfiles\\Lab06\\Starter\\ and click **OK**.
 
-17. On the **Server Registration** page of the **Register Server Wizard**, ensure that the **Launch Microsoft Azure Recovery Services Agent** checkbox is selected and click **Close**. This will automatically open the **Microsoft Azure Backup** console.
+17. Click **Finish** and wait for the registration to complete.
+
+18. On the **Server Registration** page of the **Register Server Wizard**, ensure that the **Launch Microsoft Azure Recovery Services Agent** checkbox is selected and click **Close**. This will automatically open the **Microsoft Azure Backup** console.
 
 
 #### Task 4: Create a backup schedule
