--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -296,7 +296,7 @@
 
 4. In the list of results, click **Microsoft Account (Windows Live)**
 
-5. On the **Microsoft Account (Windows Live)** blade, click **Add**. Wait till the application gets added.
+5. On the **Microsoft Account (Windows Live)** blade, type **Windows Live** in the **Name** field, and click **Add**. Wait till the application gets added.
 
 6. On the **Microsoft Account (Windows Live) - Quick start** blade, click **Configure single sign-on (required)**. 
 
