--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -457,9 +457,9 @@
 
 2. In the hub menu, click **More services** and then, in the service menu, click **Azure Active Directory**.
 
-3. On the **adatum** blade, click **Devices (preview)**.
+3. On the **adatum** blade, click **Devices**.
 
-4. On the **Devices (Preview) - All devices** blade, click **Device settings**.
+4. On the **Devices - All devices** blade, click **Device settings**.
 
 5. Verify that the **Users may join devices to Azure AD** setting is set to **All**.
 
