--- a/Instructions/20533D_LAB_06.md
+++ b/Instructions/20533D_LAB_06.md
@@ -226,7 +226,7 @@ The main tasks for this exercise are as follows:
 
   - Resource group: create a new resource group named **20533D0603-LabRG**
 
-  - Location: the same Azure region that you chose when runnng **Setup-Azure** at the beginning of this module
+  - Location: the same Azure region that you chose when running **Setup-Azure** at the beginning of this module
 
   - Pin to dashboard: ensure that the check box is cleared
 
