Invalid command line.
Invalid command line. Found extra arguments [--azure-size Standard_A1_v2]

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -89,7 +89,7 @@
   
 16. From the **Administrator: Command Prompt** window, type the following, replacing `Azure-subscription-Id` with the value of your Azure subscription ID you copied earlier in this task, and replacing the `Azure-region` with the name of the Azure region you selected when running **Add-20533DEnvironment** at the beginning of this module, and then press Enter (make sure to use the lower case characters when specifying the virtual machine name and verify that the specified virtual machine size is available in the target Azure region): 
   ```
-  docker-machine create --driver azure --azure-ssh-user student --azure-subscription-id "Azure-subscrption-id" --azure-open-port 80 --azure-image "Canonical:UbuntuServer:16.04.0-LTS:latest" --azure-location "Azure-region" --azure-resource-group "20533D0702-LabRG" --azure-availability-set "20533D0702-avset" --azure-static-public-ip "20533d0702-vm0" --azure-size "Standard_A1_v2"
+  docker-machine create --driver azure --azure-ssh-user student --azure-subscription-id "Azure-subscrption-id" --azure-open-port 80 --azure-image "Canonical:UbuntuServer:16.04.0-LTS:latest" --azure-location "Azure-region" --azure-resource-group "20533D0702-LabRG" --azure-availability-set "20533D0702-avset" --azure-static-public-ip "20533d0702-vm0"
   ```
   
 17. The **Administrator: Command Prompt** window will display the message asking you to use a web browser to open the page https://aka.ms/devicelogin and enter the code provided at the end of the message. Start Intrenet Explorer and browse to https://aka.ms/devicelogin. 
