added --azure-size to docker-machine

--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -99,7 +99,11 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
   - --azure-availability-set: **"20533D0702-avset"**
 
-  - --azure-static-public-ip: **"20533d0702-vm0"**
+  - --azure-static-public-ip
+  
+  - --azure-size: **Standard_A1_v2**
+  
+  - virtual machine name: **"20533d0702-vm0"**
 
 12. When prompted, authenticate to your Azure subscription. 
 
