updated docker-machine parameters

--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -83,7 +83,7 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
 10. In the **Administrator: Command Prompt** window, change the current directory to the location of the user profile. 
   
-11. From the **Administrator: Command Prompt** window, create a new Azure VM configured as Docker host by running **docker-machine** with the following settings:
+11. From the **Administrator: Command Prompt** window, create a new Azure VM named **"20533d0702-vm0"** and configured as Docker host by running **docker-machine** with the following settings:
 
   - --azure-ssh-user: **student**
 
@@ -102,8 +102,6 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
   - --azure-static-public-ip
   
   - --azure-size: **Standard_A1_v2**
-  
-  - virtual machine name: **"20533d0702-vm0"**
 
 12. When prompted, authenticate to your Azure subscription. 
 
