--- a/Instructions/20533D_LAB_AK_10.md
+++ b/Instructions/20533D_LAB_AK_10.md
@@ -7,7 +7,7 @@
   
 1. Sign in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Click **Start** and click **Run** (In Windows 10 and Windows Server 2016, type **Run** in the Start menu Search box, or press the **Windows key+R**). In the **Run** text box, type the following and press **Enter**:
+2. Right-click **Start** and click **Run** (alternatively, click **Start** and type **Run** in the Start menu Search box, or press the **Windows key+R**). In the **Run** text box, type the following and press **Enter**:
   ```
   Notepad E:\Labfiles\Lab10\Starter\Set-20533D1001Lab.ps1
   ```
