--- a/Instructions/20533D_LAB_AK_11.md
+++ b/Instructions/20533D_LAB_AK_11.md
@@ -99,7 +99,7 @@
   
 #### Task 1: Import a runbook
   
-1. In the Azure portal, on the AutomationAccount-20533D11 blade, in the PROCESS AUTOMATION** section, click **Runbooks**.
+1. In the Azure portal, on the AutomationAccount-20533D11 blade, in the **PROCESS AUTOMATION** section, click **Runbooks**.
 
 2. Click **Add a runbook**.
 
