typo in Exploer

--- a/Instructions/20533D_LAB_09.md
+++ b/Instructions/20533D_LAB_09.md
@@ -303,7 +303,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Configure Multi-Factor Authentication
   
-1. Start Internet Exploer and sign in to the Azure portal by using the Microsoft account that is the Service Administrator of your subscription.
+1. Start Internet Explorer and sign in to the Azure portal by using the Microsoft account that is the Service Administrator of your subscription.
 
 2. Enable Multi-Factor Authentication for the Adatum Azure AD user account of **Karen Gruber**.
 
