--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -47,7 +47,7 @@
 
 6. Click **Download Usage** and then click **Version 2 - Preview**.
 
-7. In Microsoft Edge, when prompted whether to open or save the .csv file, click Open.
+7. In Microsoft Edge, when prompted whether to open or save the .csv file, click **Save** and then click **Open**.
 
 8. When prompted **How do you want to open this file?**, click **Notepad**, uncheck the checkbox **Always use this app to open .csv files**, and then click **OK**.
 
@@ -199,7 +199,7 @@
   Get-AzureRmResource | Where-Object ResourceGroupName -eq $rg2Name
   ```
 
-12. Select the line you just typed, right-click it, and then click **Run selection**.
+12. Select the line you just typed, right-click it, and then click **Run selection**. Verify that the route table was moved to the new resource group.
 
 >  **Result**: After completing this exercise, you should have used Azure PowerShell to manage Azure resources and resource groups.
 
@@ -255,10 +255,14 @@
   az resource move --ids "/subscriptions/{guid}/resourceGroups/20533D0102-LabRG/providers/Microsoft.Network/routeTables/20533D0101-rt" --destination-group "20533D0101-LabRG"
   ```
 
-5. From **Administrator: Command Prompt**, type the following command and then press Enter:
+5. Wait for the operation to complete.
+
+6. From **Administrator: Command Prompt**, type the following command and then press Enter:
   ```
   az resource list --resource-group 20533D0101-LabRG
   ```
+
+7. Verify that the route table was moved back to the original resource group.
 
 #### Task 3: Remove the lab environment
 
@@ -277,7 +281,7 @@
 
 6. If prompted, specify the current lab number.
 
-7. When prompted for confirmation, type **y**.
+7. When prompted for confirmation, type **y**. Wait for the script to complete.
 
 8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
