Update 20533D_LAB_03.md Word Changes
https://i.imgur.com/JLywU5o.png

--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -290,7 +290,7 @@ The main tasks for this exercise are as follows:
   
 1. To monitor the progress of the deployment, in Microsoft Edge, in the Azure portal, navigate to the **20533D0301-LabRG** resource group blade.
 
-2. On the 20533D0301-LabRG blade, in the Essentials section, click the **Deploying** link. 
+2. On the 20533D0301-LabRG blade, in the Settings section, click the **Deployments** link. 
 
 3. On the 20533D0301-LabRG - Deployments blade, click the **WebTierVM1-Deployment** link.
 
@@ -343,7 +343,7 @@ The main tasks for this exercise are as follows:
   
 1. To monitor the progress of the deployment, in Microsoft Edge, in the Azure portal, navigate to the **20533D0301-LabRG** resource group blade.
 
-2. On the 20533D0301-LabRG blade, in the Essentials section, click the **Deploying** link. 
+2. On the 20533D0301-LabRG blade, in the Settings section, click the **Deployments** link. 
 
 3. On the 20533D0301-LabRG - Deployments blade, click the **WebTierVM2-Deployment** link.
 
