Update 20533D_LAB_AK_03.md Word Changes
https://i.imgur.com/JLywU5o.png

--- a/Instructions/20533D_LAB_AK_03.md
+++ b/Instructions/20533D_LAB_AK_03.md
@@ -265,7 +265,7 @@
 
 2. On the Resource groups blade, click **20533D0301-LabRG**.
 
-3. On the 20533D0301-LabRG blade, in the Essentials section, click the **Deploying** link. 
+3. On the 20533D0301-LabRG blade, in the Settings section, click the **Deployments** link. 
 
 4. On the 20533D0301-LabRG - Deployments blade, click the **WebTierVM1-Deployment** link.
 
@@ -326,7 +326,7 @@
 
 2. On the Resource groups blade, click **20533D0301-LabRG**.
 
-3. On the 20533D0301-LabRG blade, in the Essentials section, click the **Deploying** link. 
+3. On the 20533D0301-LabRG blade, in the Settings section, click the **Deployments** link. 
 
 4. On the 20533D0301-LabRG - Deployments blade, click the **WebTierVM2-Deployment** link.
 
