20533D_LAB_08.md Wording Change

--- a/Instructions/20533D_LAB_08.md
+++ b/Instructions/20533D_LAB_08.md
@@ -301,7 +301,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Monitor an active cloud service
   
-1. In the Azure portal, navigate to the **Monitor** blade, locate the **Network In Alert** entry, and identify the value in the **LAST FIRED** column.
+1. In the Azure portal, navigate to the **Monitor** blade, locate the **Network In Alert** entry, and identify the value in the **LAST ACTIVE** column.
 
 2. Open another Microsoft Edge tab, browse to **www.hotmail.com**, and sign in with the username and password of the Microsoft Account that is the Service Administrator of your Azure subscription. 
 
