20533D_LAB_AK_08.md Wording Changes

--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -149,7 +149,7 @@
 
 36. On the **SQL databases** blade, in the list of SQL databases, click **CloudServiceProdDB**.
 
-37. On the CloudServiceProdDB blade, in the **Essentials** section, click the **Show database connection strings** link.
+37. On the CloudServiceProdDB blade, in the **Settings** section, click the **Connection strings** link.
 
 38. On the **Database connection strings** blade, ensure that the **ADO.NET** tab is selected, click the **Click to copy** icon.
 
@@ -410,7 +410,7 @@
 
 2. On the **Monitor** blade, click **Alerts**
 
-3. In the list of alerts, note the **Network In Alert** entry and identify the value in the **LAST FIRED** column.
+3. In the list of alerts, note the **Network In Alert** entry and identify the value in the **LAST ACTIVE** column.
 
 3. Open a new Microsoft Edge tab.
 
