--- a/Instructions/20533D_LAB_09.md
+++ b/Instructions/20533D_LAB_09.md
@@ -109,9 +109,9 @@ The main tasks for this exercise are as follows:
     
 4. Note the new password.
 
-5. Open an InPrivate Microsoft Edge window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Microsoft Edge window. 
+5. Open an InPrivate Microsoft Edge window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to a new value and then sign-out and close the InPrivate Microsoft Edge window. Take a note of the new password.
 
-6. Open an InPrivate Microsoft Edge window, navigate to the Azure classic portal, sign in as Karen Gruber, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Microsoft Edge window. 
+6. Open an InPrivate Microsoft Edge window, navigate to the Azure classic portal, sign in as Karen Gruber, when prompted, change the password to a new value and then sign-out and close the InPrivate Microsoft Edge window. Take a note of the new password.
 
 7. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Microsoft Edge.
 
@@ -353,7 +353,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Authenticate to Azure from a Windows 10 Azure-joined computer
   
-1. Sign in to MIA-CL1 by using the Karen Gruber's Adatum Azure AD account and **Pa55w.rd** as its password.
+1. Sign in to MIA-CL1 by using the Karen Gruber's Adatum Azure AD account and the password you set for this account in exercise 1.
 
 2. Accept the incoming call and press # key on your phone to complete verification.
 
