removed references to Pa55w.rd
Pa55w.rd can no longer be used when changing passwords of Azure AD accounts

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -91,7 +91,7 @@
 
 17. When prompted to sign in, specify the full user name (including the @_domain-name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
 
-18. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
+18. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
 19. If prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
@@ -101,7 +101,7 @@
 
 22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password.
 
-23. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and **Confirm password** boxes, type **Pa55w.rd**, and click **Update password and sign in**.
+23. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and **Confirm password** boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
 24. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
 
@@ -216,11 +216,11 @@
   Connect-MsolService
   ```
 
-7. In the **Enter Credentials** dialog box, enter the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber and its password **Pa55w.rd**, and then click **OK**.
+7. In the **Enter Credentials** dialog box, enter the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber and its password, and then click **OK**.
 
 8. In the PowerShell ISE, in the script pane, locate the following code:
   ```
-  New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd' -ForceChangePassword $false -UsageLocation 'US'
+  New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd123' -ForceChangePassword $false -UsageLocation 'US'
   ```
 
 9. Replace `<#Copy your Azure Directory domain name here#>` with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant in the first exercise of this lab.
@@ -349,7 +349,7 @@
 
 2. On the **Microsoft Azure** page, click **Use another account**.
 
-3. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
+3. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd123** as the corresponding password. 
 
 4. On the Apps page, click the ellipsis next to the **Skype** icon. Note the option to update the credentials. 
 
@@ -369,7 +369,7 @@
 
 12. Verify that **Access Panel Extension** is turned on. If not, click **Access Panel Extension** and move the slider to the **On** position.
 
-13. Restart Microsoft Edge and browse back to **https://myapps.microsoft.com**. If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
+13. Restart Microsoft Edge and browse back to **https://myapps.microsoft.com**. If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd123** as the corresponding password. 
 
 14. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
 
@@ -473,7 +473,7 @@
 
 10. On the **Let's get you signed in** page, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Karen Gruber's account and click **Next**.
 
-11. On the **Enter password** page, type **Pa55w.rd** and click **Sign in**. 
+11. On the **Enter password** page, type the password you assigned to the Karen Gruber's account in exercise 1 of this lab and click **Sign in**. 
 
 12. Since you set up Karen Gruber's account with MFA in the previous exercise, you should receive at this point a text message conatining a verification code. Retrieve the verification code from your mobile phone, type it in the text box on the **Help us protect your account** page, and click **Next**.
 
@@ -494,7 +494,7 @@
 
 #### Task 2: Authenticate to Azure from a Windows 10 Azure-joined computer
   
-1. Sign in to MIA-CL1 by using the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Karen Gruber's Adatum Azure AD account and **Pa55w.rd** as its password.
+1. Sign in to MIA-CL1 by using the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Karen Gruber's Adatum Azure AD account and its password.
 
 2. On the **Your organization requires Windows Hello** page, click **Setup PIN**. 
 
