removed references to Pa55w.rd
it is no longer possible to use Pa55w.rd when changing passwords of Azure AD accounts

--- a/Instructions/20533D_LAB_AK_10.md
+++ b/Instructions/20533D_LAB_AK_10.md
@@ -111,7 +111,7 @@
 
 22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the SyncAdmin account and the corresponding temporary password. 
 
-23. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
+23. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
 24. In the Internet Explorer window, click the user name in the upper-right corner of the page and, in the drop-down menu, click **Sign out**
 
@@ -143,7 +143,7 @@
 
   - USERNAME: **syncadmin@_domain name_.onmicrosoft.com** where _domain name_ is the unique name you assigned to the new Azure Active Directory tenant in task 2
 
-  - PASSWORD: **Pa55w.rd**
+  - PASSWORD: the password you set in task 2
 
 11. On the **Connect your directories** page, verify that the **adatum.com** forest is selected and click **Add Directory**
 
