Updated password change steps

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -93,6 +93,8 @@
 
 18. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
+   > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
+   
 19. If prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
 20. Close the InPrivate Mirosoft Edge session.
@@ -103,6 +105,8 @@
 
 23. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and **Confirm password** boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
+   > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
+   
 24. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
 
 
