Updated password change steps

--- a/Instructions/20533D_LAB_AK_10.md
+++ b/Instructions/20533D_LAB_AK_10.md
@@ -113,6 +113,8 @@
 
 23. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
+   > **Note:** If you receive the message **We've seen that password too many times before. Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
+   
 24. In the Internet Explorer window, click the user name in the upper-right corner of the page and, in the drop-down menu, click **Sign out**
 
 25. Close the InPrivate Internet Explorer session.
