20533D_LAB_AK_07.md Added missing word

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -433,7 +433,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   kubectl get services
   ```
 
-6. Repeat step 5 until the value in the **EXTERNAL-IP** column for nginx-20533d0704 changes from **<pending>** to a public IP address. Note the public IP address in the **EXTERNAL-IP** column for nginx-20533d0704. 
+6. Repeat step 5 until the value in the **EXTERNAL-IP** column for nginx-20533d0704 changes from **<<pending>pending>** to a public IP address. Note the public IP address in the **EXTERNAL-IP** column for nginx-20533d0704. 
 
 7. Start Microsoft Edge and browse to the IP address you obtained in the previous step. Verify that Internet Explorer displays the **Welcome to nginx!** 
 
