20533D_LAB_AK_09.md Word Changes
Password for Mario Account is not Pa55w.rd123 It is set up as Pa55w.rd in the PowerShell Script

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -353,7 +353,7 @@
 
 2. On the **Microsoft Azure** page, click **Use another account**.
 
-3. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd123** as the corresponding password. 
+3. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
 
 4. On the Apps page, click the ellipsis next to the **Skype** icon. Note the option to update the credentials. 
 
@@ -373,7 +373,7 @@
 
 12. Verify that **Access Panel Extension** is turned on. If not, click **Access Panel Extension** and move the slider to the **On** position.
 
-13. Restart Microsoft Edge and browse back to **https://myapps.microsoft.com**. If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd123** as the corresponding password. 
+13. Restart Microsoft Edge and browse back to **https://myapps.microsoft.com**. If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
 
 14. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
 
