--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -57,11 +57,13 @@
 
 - Deployment model: **Resource manager**
 
-- Account kind: **General purpose**
+- Account kind: **Storage (general purpose v1)**
 
 - Performance: **Standard**
 
 - Replication: **Locally-redundant storage (LRS)**
+
+- Secure transfer required: **Disabled**
 
 - Subscription: the name of the Azure subscription where you created the SQL database in the previous task
 
@@ -69,7 +71,7 @@
 
 - Location: the same location you specified in the previous task
 
-- Virtual networks (Preview): Disabled
+- Virtual networks (Preview): **Disabled**
 
 - Pin to dashboard: leave the checkbox unchecked
 
@@ -85,13 +87,13 @@
 
 4. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
-5. Locate the **&lt;Role&gt;** element with the name set to **AdatumAdsWebRole**.
+5. Locate the **&lt;Role&gt;** element with the name set to **AdatumAdsWeb**.
 
 6. Within that **&lt;Role&gt;** element, locate the **&lt;Instances&gt;** element.
 
 7. In the **&lt;Instances&gt;** element, set the **count** attribute to **2**.
 
-8. Locate the **&lt;Role&gt;** element with the name set to **AdatumAdsWorkerRole**.
+8. Locate the **&lt;Role&gt;** element with the name set to **AdatumAdsWorker**.
 
 9. Within that **&lt;Role**> element, locate the **&lt;Instances&gt;** element.
 
@@ -103,13 +105,13 @@
 
 13. On the **Storage accounts** blade, in the list of storage accounts, click the storage acount you created in the previous task of this exercise.
 
-14. On the storage account blace, click **Access keys**
+14. On the storage account blade, click **Access keys**
 
 15. Click the **Click to copy** icon next to the **CONNECTION STRING** entry for **key1**. If prompted, click **Allow access**.
 
 16. Switch to Microsoft Visual Studio.
 
-17. In the ServiceConfigurationCloud.cscfg file, locate the **&lt;Role&gt;** element with the name **AdatumAdsWebRole**.
+17. In the ServiceConfigurationCloud.cscfg file, locate the **&lt;Role&gt;** element with the name **AdatumAdsWeb**.
 
 18. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **StorageConnectionString**.
 
@@ -117,7 +119,7 @@
 
 20. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
 
-21. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
+21. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorker**.
 
 22. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name **StorageConnectionString**.
 
@@ -125,7 +127,7 @@
 
 24. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
 
-25. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWebRole**.
+25. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWeb**.
 
 26. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **Microsoft.WindowsAzure.Plugins.Diagnostics.ConnectionString**.
 
@@ -133,7 +135,7 @@
 
 28. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
 
-29. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
+29. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorker**.
 
 30. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **Microsoft.WindowsAzure.Plugins.Diagnostics.ConnectionString**.
 
@@ -155,7 +157,7 @@
 
 39. Switch back to Visual Studio.
 
-40. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorkerRole**.
+40. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorker**.
 
 41. Within that **&lt;Role&gt;** element, locate the **&lt;Setting&gt;** element with the name set to **AdatumAdsDbConnectionString**.
 
@@ -179,7 +181,7 @@
 
 #### Task 4: Deploy an PaaS cloud service
   
-1. In the Azure portal, click **+ New**. In the **Search the Marketplace** text box, type **Cloud service**, and, in the list of results, click **Cloud Service**.
+1. In the Azure portal, click **+ New**. In the **Search the Marketplace** text box, type **Cloud service**, and, in the list of results, click **Cloud service**.
 
 2. On the **Cloud service** blade, click **Create**.
 
@@ -205,7 +207,7 @@
 
 9. In the **Choose File to Upload** dialog box, browse to E:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
-10. Click **AdatumAds.cspkg**, and then click **Open**.
+10. Click **AdatumAdsCloudService.cspkg**, and then click **Open**.
 
 11. Wait until the package is fully uploaded.
 
@@ -253,7 +255,7 @@
 
 10. In the **Choose File to Upload** dialog box, browse to E:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
 
-11. Click **AdatumAds.cspkg**, and then click **Open**.
+11. Click **AdatumAdsCloudService.cspkg**, and then click **Open**.
 
 12. Wait until the package is fully uploaded.
 
@@ -329,11 +331,11 @@
 
 7. In the cloud service blade, click **Roles and Instances**.
 
-8. Click **AdatumAdsWebRole_IN_0**.
+8. Click **AdatumAdsWeb_IN_0**.
 
-9. On the **AdatumAdsWebRole_IN_0** blade, click **Connect**.
+9. On the **AdatumAdsWeb_IN_0** blade, click **Connect**.
 
-10. When prompted whether to open or save the **AdatumAdsWebRole_IN_0.rdp**, click **Open**.
+10. When prompted whether to open or save the **AdatumAdsWeb_IN_0.rdp**, click **Open**.
 
 11. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -361,7 +363,7 @@
 
 2. In the MONITORING section, click **Metrics**.
 
-3. On the Metrics blade, ensure that **AdatumAdsWebRole** appears in the **Role** drop down list, and scroll down to the **Network in and out** chart.
+3. On the Metrics blade, ensure that **AdatumAdsWeb** appears in the **Role** drop down list, and scroll down to the **Network in and out** chart.
 
 
 
