updated package and Azure portal interface changes

--- a/Instructions/20533D_LAB_08.md
+++ b/Instructions/20533D_LAB_08.md
@@ -93,11 +93,13 @@ Password: **Pa55w.rd**
 
 - Deployment model: **Resource manager**
 
-- Account kind: **General purpose**
+- Account kind: **Storage (general purpose v1)**
 
 - Performance: **Standard**
 
 - Replication: **Locally-redundant storage (LRS)**
+
+- Secure transfer required: **Disabled**
 
 - Subscription: the name of the Azure subscription where you created the SQL database in the previous task
 
@@ -105,7 +107,7 @@ Password: **Pa55w.rd**
 
 - Location: the same location you specified in the previous task
 
-- Virtual networks (Preview): Disabled
+- Virtual networks (Preview): **Disabled**
 
 - Pin to dashboard: leave the checkbox unchecked
 
@@ -114,7 +116,7 @@ Password: **Pa55w.rd**
   
 1. Launch Visual Studio, and then open the **ServiceConfiguration.Cloud.cscfg** file located in E:\\LabFiles\\Lab08\\Starter\\Production\\Package folder.
 
-2. In the file, set the **Instance count** attribute for the **AdatumAdsWebRole** and **AdatumAdsWorkerRole** roles to **2**.
+2. In the file, set the **Instance count** attribute for the **AdatumAdsWeb** and **AdatumAdsWorker** roles to **2**.
 
 3. Switch to the Azure portal, navigate to the blade of the storage account you created earlier in this exercise and, from its **Access keys** blade, copy the value of the **CONNECTION STRING** entry of the **Primary** key.
 
@@ -181,7 +183,7 @@ The main tasks for this exercise are as follows:
 
 2. Set the staging deployment name to **AdatumAdsStage**.
 
-3. Upload the package **AdatumAds.cspkg** from E:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
+3. Upload the package **AdatumAdsCloudService.cspkg** from E:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
 
 4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from E:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
@@ -230,7 +232,7 @@ The main tasks for this exercise are as follows:
 
 6. Close the Microsoft Edge tab showing the staging deployment.
 
-7. Connect via Remote Desktop to the **AdatumAdsWebRole_IN_0** instance of the production deployment.
+7. Connect via Remote Desktop to the **AdatumAdsWeb_IN_0** instance of the production deployment.
 
 8. Close the remote desktop connection.
 
@@ -261,7 +263,7 @@ The main tasks for this exercise are as follows:
 
 2. From the production slot of the cloud service, navigate to its **Metrics** blade.
 
-3. On the Metrics blade, ensure that **AdatumAdsWebRole** appears in the **Role** drop down list, and scroll down to the **Network in and out** chart.
+3. On the Metrics blade, ensure that **AdatumAdsWeb** appears in the **Role** drop down list, and scroll down to the **Network in and out** chart.
 
 
 #### Task 2: Create an alert
