--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -247,7 +247,7 @@
 
 6. Ensure that the **Package/configuration location** option is set to **from local**.
 
-7. click **Storage account**
+7. Click **Storage account**
 
 8. On the **Choose storage account** blade, click the storage account you created in the previous exercise.
 
