updated VM size references

--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -46,7 +46,7 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
 #### Task 1: Install Docker Toolbox for Windows
   
-1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Add-20533DEnvironment** script successfully completed. The script creates an Azure VMs of Standard D2 v3 size in your subscription. You will use it to install Docker Toolbox for Windows.
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Add-20533DEnvironment** script successfully completed. The script creates an Azure VM of the size that supports nested virtualization. You will use it to install Docker Toolbox for Windows.
 
 2. Start Microsoft Edge and browse to the Azure portal. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
@@ -101,7 +101,7 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
   - --azure-static-public-ip
   
-  - --azure-size: **Standard_A1_v2**
+  - --azure-size: an available VM size
 
 12. When prompted, authenticate to your Azure subscription. 
 
