added requirement for Standard_A1_v2 availability

--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -9,21 +9,23 @@
 
 2. Start Windows Microsoft Edge, navigate to https://portal.azure.com, and then sign in with an account that is the Service Administrator of your Azure subscription.
 
-3. In the Azure portal, click **+ New**. On the **New** blade, click **Databases** and then click **SQL Database**.
+3. From the Azure portal, identify the region in which you can provision an Azure VM of the size **Standard_A1_v2**. This will be the region you will use to provision all resources in this lab.
 
-4. On the **SQL Database** blade, set the **Database name** to **CloudServiceProdDB**. 
+4. In the Azure portal, click **+ New**. On the **New** blade, click **Databases** and then click **SQL Database**.
 
-5. Ensure that the name of your Azure subscription appears in the **Subscription** drop down list.
+5. On the **SQL Database** blade, set the **Database name** to **CloudServiceProdDB**. 
 
-6. In the **Resource group** section, ensure that **Create new** is selected and, in the textbox below, type **20533D0801-LabRG**.
+6. Ensure that the name of your Azure subscription appears in the **Subscription** drop down list.
 
-7. In the **Select source** drop down list, click **Blank database**.
+7. In the **Resource group** section, ensure that **Create new** is selected and, in the textbox below, type **20533D0801-LabRG**.
 
-8. Click **Server**.
+8. In the **Select source** drop down list, click **Blank database**.
 
-9. On the **Server** blade, click **Create a new server**. 
+9. Click **Server**.
 
-10. On the **New server** blade, specify the following settings and click **Select**.
+10. On the **Server** blade, click **Create a new server**. 
+
+11. On the **New server** blade, specify the following settings and click **Select**.
 
 - Server name: any valid, unique name
 
@@ -33,17 +35,17 @@
 
 - Confirm password: **Pa55w.rd**
 
-- Location: the Azure region closest to the lab location
+- Location: the Azure region you identified in step 4 of this task
 
 - Allow azure services to access server: make sure that the checkbox is enabled
 
-11. Back on the SQL Database blade, in the **Want to use SQL elastic pool?** section, ensure that **Not now** is selected
+12. Back on the SQL Database blade, in the **Want to use SQL elastic pool?** section, ensure that **Not now** is selected
 
-12. Click **Pricing tier**. 
+13. Click **Pricing tier**. 
 
-13. On the **Configure performance** blade, click **Basic** and click **Apply**.
+14. On the **Configure performance** blade, click **Basic** and click **Apply**.
 
-14. Leave the default value in the **Collation** text box, leave the **Pin to dashboard** checkbox unchecked, and click **Create**.
+15. Leave the default value in the **Collation** text box, leave the **Pin to dashboard** checkbox unchecked, and click **Create**.
 
 
 
