added requirement for Standard_A1_v2 availability

--- a/Instructions/20533D_LAB_08.md
+++ b/Instructions/20533D_LAB_08.md
@@ -52,7 +52,9 @@ Password: **Pa55w.rd**
 
 2. Start Microsoft Edge, browse to the Azure portal, and sign in with an account that is the Service Administrator of your Azure subscription.
 
-3. Create a new Azure SQL Database with the following settings:
+3. From the Azure portal, identify the region in which you can provision an Azure VM of the size **Standard_A1_v2**. This will be the region you will use to provision all resources in this lab.
+
+4. Create a new Azure SQL Database with the following settings:
 
 - Database name: **CloudServiceProdDB**
 
@@ -72,7 +74,7 @@ Password: **Pa55w.rd**
 
   - Confirm password: **Pa55w.rd**
 
-  - Location: the Azure region closest to the lab location
+  - Location: the Azure region you identified in the step 3 of this task
 
   - Allow azure services to access server: make sure that the checkbox is enabled
 
