Storage (general purpose v1)

--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -19,7 +19,7 @@
 
   - Deployment model: **Resource Manager**
 
-  - Account kind: **General purpose**
+  - Account kind: **Storage (general purpose v1)**
 
   - Performance: **Standard**
 
