Storage (general purpose v1)

--- a/Instructions/20533D_LAB_06.md
+++ b/Instructions/20533D_LAB_06.md
@@ -53,7 +53,7 @@ The main tasks for this exercise are as follows:
 
   - Deployment model: **Resource Manager**
 
-  - Account kind: **General purpose**
+  - Account kind: **Storage (general purpose v1)**
 
   - Performance: **Standard**
 
