--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -135,7 +135,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 2. Review the output returned by the docker-machine env command. Next, in the **Administrator: Command Prompt** window, type the following, and then press Enter (it will not produce any output): 
   ```
-  FOR /f "tokens=*" %i IN ('docker-machine env 20533d0702-vm0') DO @%i
+  @FOR /f "tokens=*" %i IN ('docker-machine env 20533d0702-vm0') DO @%i
   ```
 
 3. In the **Administrator: Command Prompt** window, type the following, press Enter, and verify that the output contains Docker environment variables, including `DOCKER_CERT_PATH`, `DOCKER_HOST`, `DOCKER_MACHINE_NAME`, and `DOCKER_TLS_VERIFY`:
