--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -183,17 +183,19 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 4. In Notepad, type the following text, click **File** and click **Save**:
   ```
-  wordpress:
-    image: wordpress
-    links:
-      - db:mysql
-    ports:
-      - 8080:80
+  version: "3"
+  services:
+    wordpress:
+      image: wordpress
+      links:
+        - db:mysql
+      ports:
+        - 8080:80
 
-  db:
-    image: mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: Pa55w.rd
+    db:
+      image: mariadb
+      environment:
+        MYSQL_ROOT_PASSWORD: Pa55w.rd
   ```
 
 #### Task 2: Deploy the containers with docker-compose to an Azure VM
